# hybrid-RAG-financial-analyst

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: download_data.py  evaluate.py  ingest.py  query.py
src/: __init__.py  app.py  config.py
src/agents/: __init__.py  answer_agent.py  context_assembler.py  orchestrator.py  query_analyzer.py  rag_agent.py  state.py  web_search_agent.py
src/evaluation/: evaluator.py
src/indexing/: __init__.py  bm25_index.py  chroma_store.py  embedder.py
src/ingestion/: chunker.py  metadata_extractor.py  pdf_parser.py
src/retrieval/: __init__.py  bm25_retriever.py  hybrid_ranker.py  vector_retriever.py
